@@ -1,0 +1,87 @@
+# -*- mode: Perl; tab-width: 4; -*-
+#
+# Fink::Checksum::MD5 module
+#
+# Fink - a package manager that downloads source and installs it
+# Copyright (c) 2005 The Fink Package Manager Team
+#
+# This program is free software; you can redistribute it and/or
+# modify it under the terms of the GNU General Public License
+# as published by the Free Software Foundation; either version 2
+# of the License, or (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA      02111-1307, USA.
+#
+
+package Fink::Checksum::MD5;
+
+use Fink::Checksum;
+use Fink::Config qw($basepath);
+
+our @ISA = qw(Fink::Checksum);
+our $VERSION = ( qw$Revision$ )[-1];
+
+our $md5cmd;
+our $match;
+
+sub about {
+	my $self = shift;
+
+	my @about = ('MD5', $VERSION, 'MD5 checksum');
+	return wantarray? @about : \@about;
+}
+
+sub new {
+	my $class = shift;
+
+	my $self = bless({}, $class);
+
+	if(-e "/sbin/md5") {
+		$md5cmd = "/sbin/md5";
+		$match = '= ([^\s]+)$';
+	} elsif (-e "$basepath/bin/md5deep") {
+		$md5cmd = "$basepath/bin/md5deep";
+		$match = '([^\s]*)\s*(:?[^\s]*)';
+	} else {
+		$md5cmd = "md5sum";
+		$match = '([^\s]*)\s*(:?[^\s]*)';
+	}
+
+	return $self;
+}
+
+# Returns the MD5 checksum of the given $filename. Uses /sbin/md5 if it
+# is available, otherwise uses the first md5sum in PATH. The output of
+# the chosen command is read via an open() pipe and matched against the
+# appropriate regexp. If the command returns failure or its output was
+# not in the expected format, the program dies with an error message.
+
+sub get_checksum {
+	my $class = shift;
+	my $filename = shift;
+
+	my ($pid, $checksum);
+
+	$pid = open(MD5SUM, "$md5cmd $filename |") or die "Couldn't run $md5cmd: $!\n";
+	while (<MD5SUM>) {
+		if (/$match/) {
+			$checksum = $1;
+		}
+	}
+	close(MD5SUM) or die "Error on closing pipe  $md5cmd: $!\n";
+
+	if (not defined $checksum) {
+		die "Could not parse results of '$md5cmd $filename'\n";
+	}
+
+	return $checksum;
+}
+
+1;
